<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChallengeActivity">

    <TextView
        android:id="@+id/challengTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:text="@string/challenge_title_text"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/fragmentPlaceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/chooseChallengeTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/choose_challenge_title"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/challengeChoiceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/challengeChoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="validateChallengeChoice"
            android:text="@string/challenge_choose_button_text" />

    </LinearLayout>

</LinearLayout>