<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EndActivity">

    <TextView
        android:id="@+id/endActivityTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:paddingBottom="12dp"
        android:paddingTop="24dp"
        android:text="@string/endActivityTimeUpTitle"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/paramSummaryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/game_duration_title"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/gameDurationValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/challengeResultTitle"
            android:text="@string/challenge_result_title"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/challengeResultValue"
            android:fontFamily="cursive"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/graphImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        app:srcCompat="@drawable/beast_1_100" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="doPlayAgain"
        android:text="@string/play_again_button" />
</LinearLayout>